# automatic_university_scheduler

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: .env  Dockerfile  Dockerfile-compose  Dockerfile.old  Makefile  devcontainer.json  docker-compose.yml  environment.yml  postCommand.sh  postCreateCommand.sh
automatic_university_scheduler/: preprocessing.py  scheduling.py  validation.py
doc/: iterations.py  make_EASI501.py  make_Fake501.py  make_MECA551.py  make_Proj541.py  make_info501.py  make_math500.py  make_math501.py  make_meca501.py  module_data.csv  my_scheduling.py  scheduling.py
doc/activity_data/: EASI501.json  Fake501.json  Info501.json  MECA551.json  Math501.json  Meca501.json  Proj541.json  awesome.csv  math.csv  math500.json  math500.json.old  physics.csv  sport.json
doc/course_makers/: make_EASI501.py  make_Fake501.py  make_MECA551.py  make_Proj541.py  make_info501.py  make_math500.py  make_math501.py  make_meca501.py
doc/modules_data/: mechanics.csv
doc/room_data/: room_A.json  room_A.json.temp
doc/student_data/: calendar.json
doc/teacher_data/: Donatello.csv  Math_teacher_constraints.json
sandbox/: classes.py  course_MATE001_graph.html  db_utils.py  model.yaml  preprocessing.py  setup.yaml  sqla.py  sqla_analyze.py  sqla_loader.py  sqla_run.py
sandbox/trash/: classes.py  db_utils.py  preprocessing.py
src/automatic_university_scheduler/: __init__.py  database.py  datetime.py  datetimeutils.py  extraction.py  optimize.py  preprocessing.py  scheduling.py  (+2 more)
tests/: test_datetime.py
(+30 files in other folders)
