[metadata]
name = automatic_university_scheduler
version = 0.2
description =  University Scheduling w. Google OR-Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcharleux/automatic_university_scheduler
author = Ludovic Charleux
author_email = ludovic.charleux@univ-smb.fr
license = GPL v2
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    xlsxwriter
    setuptools
    toml
    pyyaml
    ortools
    scipy
    pandas


python_requires = >=3.10


[options.packages.find]
where = src
exclude =
    tests*
    testing*
